final fixes, swiper embed

--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,9 @@
           j = d.createElement(s),
           dl = l != "dataLayer" ? "&l=" + l : "";
         j.async = true;
-        j.src =
-          "https://www.googletagmanager.com/gtm.js?id=%27+i+dl;f.parentNode.insertBefore(j,f)";
-      })(window, document, "script", "dataLayer", "GTM-WM4KCVQ");
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-PG9KL2T");
     </script>
     <!-- End Google Tag Manager -->
     <meta charset="utf-8" />
@@ -31,7 +31,7 @@
     <!-- Google Tag Manager (noscript) -->
     <noscript
       ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-WM4KCVQ"
+        src="https://www.googletagmanager.com/ns.html?id=GTM-PG9KL2T"
         height="0"
         width="0"
         style="display: none; visibility: hidden"
